--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 					</label>
 				</fieldset>
 				<!-- /.modal-body -->
+				<span class="message"></span>
 				<div class="modal-footer">
 					<div class="footer-buttons">
 						<button class="button button-primary button-login" type="submit">Войти</button>
