--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet" />
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/style.css" />
+	<!-- scripts -->
+	<script defer src="./js/auth.js"></script>
+	<script defer src="./js/partners.js"></script>
 </head>
 
 <body>
@@ -316,10 +319,6 @@
 		</div>
 		<!-- /.modal-dialog -->
 	</div>
-	
-
-	<!-- scripts -->
-	<script src="./js/main.js"></script>
 </body>
 
 </html>
