--- a/restaurant.html
+++ b/restaurant.html
@@ -11,6 +11,7 @@
 	<!-- scripts -->
 	<script defer src="./js/auth.js"></script>
 	<script defer src="./js/menu.js"></script>
+	<script defer src="./js/cart.js"></script>
 </head>
 
 <body>
