--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<!-- scripts -->
 	<script defer src="./js/auth.js"></script>
 	<script defer src="./js/partners.js"></script>
+	<script defer src="./js/cart.js"></script>
 </head>
 
 <body>
